@@ -1,156 +1,0 @@
-
-Then /^the exchange list pager should say "([^"]*)"$/ do |range|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the exchange list table should have (\d+) data row with exchange name "([^"]*)"$/ do |rows, name|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the exchange list table should have (\d+) data rows with exchange name "([^"]*)"$/ do |rows, name|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user clicks the checkbox in exchange list row (\d+), column (\d+)$/ do |row, column|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the exchange list table should be empty$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user clicks the exchange list select all checkbox$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user clicks the first data row in the exchange list table$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the user should be taken to the edit exchange page$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the exchange name should be "([^"]*)"$/ do |name|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant list table should be empty$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant list pager should say "([^"]*)"$/ do |range|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters exchange name "([^"]*)"$/ do |name|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the exchange status should be "([^"]*)"$/ do |status|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the theme should be "([^"]*)"$/ do |theme|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters theme "([^"]*)"$/ do |theme|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters date and time "([^"]*)"$/ do |date|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters suggested cost "([^"]*)"$/ do |cost|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters organizer name "([^"]*)"$/ do |organizer|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters organizer email "([^"]*)"$/ do |email|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters organizer phone "([^"]*)"$/ do |phone|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters extra information "([^"]*)"$/ do |extra|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the date and time should be "([^"]*)"$/ do |date|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the suggested cost should be "([^"]*)"$/ do |cost|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the organizer name should be "([^"]*)"$/ do |organizer|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the organizer email should be "([^"]*)"$/ do |email|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the organizer phone should be "([^"]*)"$/ do |phone|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the extra information should be "([^"]*)"$/ do |extra|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the user should be taken to the edit participant page$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant name should be "([^"]*)"$/ do |name|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant nickname should be "([^"]*)"$/ do |nickname|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant email address should be "([^"]*)"$/ do |email|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters participant name "([^"]*)"$/ do |name|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters participant nickname "([^"]*)"$/ do |nickname|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user enters participant email address "([^"]*)"$/ do |email|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant list table should have (\d+) data row with participant name "([^"]*)"$/ do |rows, name|
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user clicks the first data row in the participant list table$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-When /^the user clicks the checkbox in participant list table row (\d+), column (\d+)$/ do |row, column|
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^participant list table should be empty$/ do
-  pending # express the regexp above with the code you wish you had
-end
-
-Then /^the participant list table should have (\d+) data row with participant name "Participant Two$/ do |rows|
-  pending # express the regexp above with the code you wish you had
-end
